test/lattests/extensions/var/good/var001.lat
int main() {
    var x = 0;
    return x;
}