test/lattests/extensions/var/bad/varInMethodReturn.lat
class a {
    var foo() { return 0; }
}